# dlauncher

./: Cargo.toml  Makefile
benches/: bench.rs
data/icons/: calculator.xpm
data/themes/light/: reset.css  theme.css
data/ui/: #DlauncherWindow.ui#  DlauncherWindow.ui  result.ui
src/: dlauncher.rs  lib.rs  util.rs
src/entry/: app_entry.rs  calc_entry.rs  extension_entry.rs  mod.rs  script_entry.rs
src/fuzzy/: mod.rs  util.rs
src/launcher/: result.rs  window.rs
src/launcher/util/: app.rs  config.rs  dirs.rs  display.rs  icon.rs  mod.rs  recent.rs  theme.rs
