[package]
name = "dlauncher"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "An application launcher for Linux that is based on Ulauncher"
homepage = "https://github.com/diced/dlauncher"
repository = "https://github.com/diced/dlauncher"
documentation = "https://docs.rs/dlauncher"
default-run = "dlauncher"

[lib]
doctest = false

[[bin]]
name = "dlauncher"
path = "src/dlauncher.rs"

[[bin]]
name = "dlauncher-toggle"
path = "src/dlauncher-toggle.rs"

[dependencies]
async-channel = "2.3.1"
dashmap = { version = "6.1.0", features = ["serde"] }
dbus = "0.9"
dbus-crossroads = "0.5"
env_logger = "0.11.6"
fasteval = "0.2.4"
fuzzy-matcher = "0.3.7"
gio = "0.20.7"
gtk4 = "0.9.5"
libc = "0.2"
libloading = "0.8"
log = "0.4.22"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
toml = "0.8"

[dev-dependencies]
brunch = "0.8.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
incremental = true
lto = "fat"